403-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 403-error
  namespace: default
spec:
  replicas: 1  # Number of pod replicas
  selector:
    matchLabels:
      app: 403-error
  template:
    metadata:
      labels:
        app: 403-error
    spec:
      containers:
      - name: 403-error
        image: ghcr.io/saisairepo/403-error:v2.2
        ports:
        - containerPort: 30023
        imagePullPolicy: Always
      imagePullSecrets:
      - name: error-secret
